language/move-lang/tests/move_check/parser/struct_field_missing_type.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/struct_field_missing_type.move:2:18
  │
2 │     struct S { f } // Each field must specify a type
  │                  ^
  │                  │
  │                  Unexpected '}'
  │                  Expected ':'

